project(mainLoopWDT LANGUAGES CXX VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)

set(HEADERS
	mainLoopWdt.h
)
add_library(${PROJECT_NAME} SHARED
	${HEADERS}
	mainLoopWdt.cpp
)

target_include_directories(${PROJECT_NAME}
	PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}/
)

target_link_libraries(${PROJECT_NAME}
	PUBLIC
	Qt${QT_VERSION_MAJOR}::Core
)

set_target_properties(${PROJECT_NAME} PROPERTIES
	WINDOWS_EXPORT_ALL_SYMBOLS ON  # For Windows DLLs if symbols are needed
	PUBLIC_HEADER ${HEADERS}
	SOVERSION ${PROJECT_VERSION_MAJOR}
)

include(GNUInstallDirs)

install(TARGETS ${PROJECT_NAME}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
